<resources>
    <string name="app_name">WorkoutSelector</string>
    <string name="equipment_description">Equipment:</string>
    <string name="target_description">Target Muscle Groups</string>
    <string name="equipment_button">Equipment</string>
    <string name="placeholder_workout_title">Workout Loading...</string>
    <string name="authorBy">"By "</string>
    <string name="placeholder_workout_author">author loading...</string>
    <string name="bullet_point">&#8226;</string>
    <string name="companyName">Harry Liversedge</string>
    <string name="equipmentAvailable">Available Equipment</string>
    <string name="test">Test</string>
    <string name="confirm_button">Confirm</string>
    <string name="loading">Loading...</string>
    <string name="repetitions_placeholder">Repetitions</string>
    <string name="randomize">Search</string>
    <string name="home_settings_description">What kind of workout?</string>
    <string name="workout_by">Workout by,</string>
    <string name="no_text" />
    <string name="example_exercise_name">Air Squats</string>
    <string name="example_exercise_duration">5</string>
    <string name="example_exercise_unit">Reps</string>
    <string name="example_group_description">Repeat for 5 rounds</string>
    <string name="example_author_name">Harry Liversedge</string>
    <string name="example_equipment">No equipment needed</string>
    <string name="example_time">5:30</string>
    <string name="start_workout_text">Start workout</string>
    <string name="workout_time_elapsed">00:00:00</string>
    <string name="workout_time_elapsed_description">Time elapsed:</string>
    <string name="countdown_description">Start in:</string>
    <string name="next_exercise">Next exercise</string>
    <string name="stop_exercise">Stop</string>
    <string name="pause_exercise">Pause</string>
    <string name="workout_time_remaining">Time remaining</string>
    <string name="play_button">Play</string>
    <string name="workout_finished">Workout completed in:</string>
    <string name="example_time_taken">00:00</string>
    <string name="return_to_workout">Return to home</string>
    <string name="page_home_title">Home</string>
    <string name="search">Search</string>
    <string name="equipment">equipment</string>
    <string name="filter">filter</string>
    <string name="content_description_filter">Filter the workouts</string>
    <string name="content_description_equipment">Choose available equipment</string>
    <string name="content_description_search">Pick a random workout</string>
    <string name="page_equipment_title">Equipment</string>
    <string name="page_workout_title">Workout</string>
    <string name="page_exercise_title">Exercise</string>
    <string name="page_workout_finished_title">Workout finished</string>
</resources>
