<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frontend.activity.FinishedWorkoutActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/workoutFinishedDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/workout_finished"
            android:textColor="@color/textColor"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/workoutTimeTaken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/example_time_taken"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="22sp" />

        <Button
            android:id="@+id/returnHomeButton"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/return_to_workout"
            android:textAllCaps="false"
            android:textColor="@color/textColorLight"
            android:textSize="18sp"
            app:cornerRadius="10dp"
            android:drawableTint="@color/textColorLight"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>