<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frontend.activity.WorkoutActivity"
    android:background="@color/colorBackground">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/auxilliary_page_app_bar"
                app:navigationIcon="@drawable/ic_keyboard_backspace_24px"
                app:title="@string/page_workout_title"
                app:titleTextColor="@color/textColorLight" />

        </com.google.android.material.appbar.AppBarLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonsHolder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coordinatorLayout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/workoutExerciseHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/buttonsHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/black_half_card"
        android:orientation="horizontal"
        android:paddingStart="24dp"
        android:paddingLeft="24dp"
        android:paddingTop="16dp"
        android:paddingEnd="24dp"
        android:paddingRight="24dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/pauseExerciseButton"
            android:theme="@style/EmphasisButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTint="@color/textColorLight"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/pause_exercise"
            android:textAllCaps="false"
            android:textColor="@color/textColorLight"
            android:textSize="14sp"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/stopExerciseButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/stop_exercise"
            android:textAllCaps="false"
            android:textColor="@color/textColorLight"
            android:textSize="14sp"
            android:theme="@style/ColoredButton"
            app:cornerRadius="20dp"
            app:icon="@drawable/ic_stop_24px"
            app:iconTint="@color/textColorLight" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>